--- a/main.css
+++ b/main.css
@@ -3,25 +3,55 @@
     --black: #000000;
 }
 
-body {
-    background: var(--bg);
-    color: var(--text);
+html {
+    font-size: 18px;
     font-family: 'Roboto', sans-serif;
+    color: var(--text);
+    background: var(--bg);
 }
 
-li {
-    list-style: circle;
+body {
+    color: var(--text);
+    background: var(--bg);
 }
 
-.btn {
+h1 {
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+}
+
+.to-do {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+li:hover {
+    color: aquamarine;
+}
+
+.theme-switch {
     position: absolute;
-    top: 20px;
-    left: 250px;
+    top: 25px;
+    left: 200px;
     height: 50px;
-    width: 50px;
-    border-radius: 50%;
+    width: 100px;
+    border-radius: 20%;
+    font-size: 16px;
     color: var(--text);
     background-color: var(--bg);
+    -webkit-border-radius: 20%;
+    -moz-border-radius: 20%;
+    -ms-border-radius: 20%;
+    -o-border-radius: 20%;
 }
 
 
