--- a/main.css
+++ b/main.css
@@ -1,65 +1,148 @@
 :root {
-    --white: #ffffff;
-    --black: #000000;
+    --light: #eeeeee;
+    --dark: #131313;
 }
 
 html {
     font-size: 18px;
-    font-family: 'Roboto', sans-serif;
-    color: var(--text);
-    background: var(--bg);
 }
 
 body {
     color: var(--text);
     background: var(--bg);
+    margin: 0;
 }
-
-h1 {
-    font-size: 2rem;
-    font-weight: 500;
-    margin-bottom: 2rem;
-}
-
-h2 {
-    font-size: 1.5rem;
-    font-weight: 500;
-    margin-bottom: 0.5rem;
-}
-
-.to-do {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 1rem;
-}
-
-li:hover {
-    color: aquamarine;
-}
-
-.theme-switch {
-    position: absolute;
-    top: 25px;
-    left: 200px;
-    height: 50px;
-    width: 100px;
-    border-radius: 20%;
-    font-size: 16px;
-    color: var(--text);
-    background-color: var(--bg);
-    -webkit-border-radius: 20%;
-    -moz-border-radius: 20%;
-    -ms-border-radius: 20%;
-    -o-border-radius: 20%;
-}
-
 
 .light-theme {
-    --bg: var(--white);
-    --text: var(--black);
+    --head: #eeeeee98;
+    --bg: var(--light);
+    --text: var(--dark);
 }
 .dark-theme {
-    --bg: var(--black);
-    --text: var(--white);
+    --head: #131313c9;
+    --bg: var(--dark);
+    --text: var(--light);
+}
+
+#header {
+    width: 100vw;
+    height: 64px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+}
+
+#header-items {
+    width: 100%;
+    height: 100%;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-item {
+    display: inline-block;
+    height: 100%;
+    color: var(--text);
+    font-weight: 700;
+    text-decoration: none;
+}
+
+#logo {
+    display: flex;
+    align-items: center;
+}
+
+#theme-toggle {
+    width: 64px;
+    font-size: 16px;
+
+    border: none;
+    background: none;
+}
+
+#header-bg-img {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+
+    background-color: var(--head);
+    backdrop-filter: blur(8px);
+    border-bottom: 1px solid #313131;
+}
+
+#menu {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+#menu-items {
+    margin-left: clamp(4rem, 20vw, 48rem);
+}
+
+#menu-items:hover > .menu-item {
+    opacity: 0.3;
+}
+
+#menu-items:hover > .menu-item:hover {
+    opacity: 1;
+}
+
+.menu-item {
+    color: var(--text);
+    font-size: clamp(3rem, 15vw, 6rem);
+    font-weight: 600;
+    font-family: "Space Mono", monospace;
+
+    display: block;
+    text-decoration: none;
+    padding: clamp(0.5rem, 0.5vw, 1rem) 0rem;
+
+    transition: opacity 0.3s ease;
+    -webkit-transition: opacity 0.3s ease;
+    -moz-transition: opacity 0.3s ease;
+    -ms-transition: opacity 0.3s ease;
+    -o-transition: opacity 0.3s ease;
+}
+
+#menu-bg-img {
+    height: 100vh;
+    width: 100vw;
+    background-image: radial-gradient(var(--text) 13%, transparent 13%);
+    opacity: 0.2;
+    background-position: 0% 0%;
+    background-size: 12vmin 12vmin;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -2;
+    transition: transform 0.5s ease, opacity 0.5s ease, background-position 1s ease;
+    -moz-transition: transform 0.5s ease, opacity 0.5s ease, background-position 1s ease;
+    -ms-transition: transform 0.5s ease, opacity 0.5s ease, background-position 1s ease;
+    -o-transition: transform 0.5s ease, opacity 0.5s ease, background-position 1s ease;
+    -webkit-transition: transform 0.5s ease, opacity 0.5s ease, background-position 1s ease;
+}
+
+#menu-items:hover ~ #menu-bg-img {
+    transform: scale(0.95);
+    opacity: 0.1;
+    -webkit-transform: scale(0.95);
+    -moz-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    -o-transform: scale(0.95);
+}
+
+#menu[data-active-index="0"] > #menu-bg-img {
+    background-position: 0 0;
+}
+#menu[data-active-index="1"] > #menu-bg-img {
+    background-position: 0 -15vmax;
+}
+#menu[data-active-index="2"] > #menu-bg-img {
+    background-position: 0 -30vmax;
 }
